style(header): fix display type and spacing on mobile

--- a/app/film-database/features/catalog/navigation/_fdHeader.scss
+++ b/app/film-database/features/catalog/navigation/_fdHeader.scss
@@ -14,52 +14,84 @@
   @media (max-width: 1050px) {
     position: relative;
   }
+  @media (max-width: 550px) {
+    grid-template-columns: auto 1fr;
+  }
+  & > * {
+    display: flex;
+    align-items: center;
+  }
   & button {
-    pointer-events: all;
+    display: flex;
+    white-space: nowrap;
+    & span {
+      @media (max-width: 550px) {
+        display: none;
+      }
+    }
   }
   & svg {
     aspect-ratio: 1/1;
     filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.4));
   }
-  &__app {
+  &__title {
     justify-self: start;
     padding-right: calc(var(--fd-gap) * 4);
     @include m.fdFontL;
     letter-spacing: 0.2em;
     text-transform: uppercase;
     white-space: nowrap;
+    @media (max-width: 550px) {
+      padding-right: unset;
+      grid-row: 1;
+      grid-column: 1;
+    }
+    @media (max-width: 400px) {
+      letter-spacing: 0.1em;
+    }
   }
-  &__ul {
+  &__interactions {
     justify-self: left;
     display: flex;
     gap: calc(var(--fd-gap) * 1.5);
-    &:nth-of-type(1) button svg {
-      width: 1.6rem;
-      margin-top: -4px;
+    @media (max-width: 550px) {
+      grid-row: 1;
+      grid-column: 2;
+      justify-self: end;
+      // svg width + gap / 2
+      margin-right: calc(2rem + (var(--fd-gap) * 4 / 2));
     }
-    &__li {
-      display: grid;
-      place-items: center;
-      &__button {
-        display: flex;
-        align-items: center;
+    & li {
+      display: flex;
+      align-items: center;
+      & button {
+        display: inherit;
+        align-items: inherit;
         gap: calc(var(--fd-gap) / 2);
         @include m.fdFontM;
         text-transform: capitalize;
         white-space: nowrap;
         font-weight: 400;
+        pointer-events: all;
       }
+    }
+    & svg {
+      width: 2rem;
     }
   }
   &__account {
     justify-self: end;
+    @media (max-width: 550px) {
+      grid-row: 1;
+      grid-column: 2;
+    }
+    & svg {
+      width: 1.6rem;
+    }
     & div {
       display: block;
       pointer-events: all;
       cursor: pointer;
-      & svg {
-        width: 2rem;
-      }
       & div {
         position: absolute;
         top: calc(30px + 2rem + 8px);
@@ -76,7 +108,6 @@
         transition:
           opacity 150ms ease,
           transform 150ms ease;
-
         &[data-open='false'] {
           opacity: 0;
           pointer-events: none;
@@ -88,6 +119,7 @@
         & button {
           @include m.fdFontM;
           text-transform: capitalize;
+          pointer-events: all;
         }
       }
     }
